[project]
name = "x402-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eth-account>=0.13.7",
    "fastapi>=0.124.4",
    "pydantic-settings>=2.12.0",
    "pysocks>=1.7.1",
    "python-dotenv>=1.2.1",
    "socksio>=1.0.0",
    "x402>=1.0.0",
]
